--- a/topografiya/templates/geodezis/head_komeral/checking_komeral_works.html
+++ b/topografiya/templates/geodezis/head_komeral/checking_komeral_works.html
@@ -760,7 +760,7 @@
             contentType: false,
             processData: false,
             success: function (result){
-               location.replace('/geodezis_komeral_works');
+               location.replace('/geodesiz_komeral_works');
             },
 
             error: function(){
