--- a/topografiya/templates/geodezis/head_komeral/komeral_works.html
+++ b/topografiya/templates/geodezis/head_komeral/komeral_works.html
@@ -92,7 +92,7 @@
                                                             <div class="text-end text-danger"><b>Қайтарилганлар сони:</b>
                                                                 <span style="color: #168eea;font-size:30px;">
                                                                     {% for work in rejecteds %}
-                                                                        {% if work.workerobject == object.object %}
+                                                                        {% if work.object == object.object %}
                                                                             {% if forloop.last %}
                                                                                     {{ forloop.counter }}
                                                                                 {% endif %}
@@ -103,7 +103,7 @@
                                                         </div>
                                                         <hr>
                                                         <div class="detail-footer">
-                                                            <a href="{% url 'rejected_komeral_works' id=object.object.id %}">
+                                                            <a href="{% url 'geodezis_rejected_komeral_works' id=object.object.id %}">
                                                                 <button class="btn btn-square btn-primary float-end" style="width: 100%">
                                                                     Батафсил маълумот
                                                                 </button>
