--- a/topografiya/templates/leader/head_komeral/checking_komeral_works.html
+++ b/topografiya/templates/leader/head_komeral/checking_komeral_works.html
@@ -359,7 +359,7 @@
                             <h3>Комерал назорати текшируви</h3>
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home f-20"></i></a></li>
-                                <li class="breadcrumb-item"><a href="{% url 'leader_komeral_works' %}">Комерал назорати текшируви</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'leader_komeral_c' %}">Комерал назорати текшируви</a></li>
                                 <li class="breadcrumb-item" ><a href="{% url 'checking_polevoy_works' id=workerobject.object.id %}">{{ workerobject.object.pdowork.object_name }}</a></li>
                             </ol>
 
