--- a/topografiya/templates/worker/object_poyasitelniy_form.html
+++ b/topografiya/templates/worker/object_poyasitelniy_form.html
@@ -17,9 +17,21 @@
                             <h3>ПОЯСНИТЕЛЬНАЯ ЗАПИСКА</h3>
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home f-20"></i></a></li>
-                                <li class="breadcrumb-item"><a href="{% url 'polevoy_works' %}">Дала Назорати</a></li>
-                                <li class="breadcrumb-item"><a href="{% url 'polevoy_work_doing' id=work.object.id %}">Выполнение работ</a></li>
+                                {% if work.status_geodezis_komeral == 2 %}
+                                    <li class="breadcrumb-item"><a href="{% url 'leader_komeral_checking' %}">Бош геодезис назорати</a></li>
+                                {% else %}
+                                    <li class="breadcrumb-item"><a href="{% url 'polevoy_works' %}">Дала Назорати</a></li>
+                                {% endif %}
+
+                                {% if work.status_geodezis_komeral != 2 %}
+                                    <li class="breadcrumb-item"><a href="{% url 'polevoy_work_doing' id=work.object.id %}">Выполнение работ</a></li>
+                                {% endif %}
+
+                                {% if work.status_geodezis_komeral == 2 %}
+                                <li class="breadcrumb-item"><a href="{% url 'leader_rejected_komeral_works' id=work.object.id %}">{{ work.object.pdowork.object_name }}</a></li>
+                                 {% else %}
                                 <li class="breadcrumb-item">{{ work.object.pdowork.object_name}}</li>
+                                {% endif %}
 {#                                <li class="breadcrumb-item">По топографо-геодезическим работам</li>#}
                             </ol>
                         </div>
@@ -320,8 +332,11 @@
                                                         <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Saqlash</button>
                                                      {% endif %}
 
-                                                    <button class="btn btn-primary nextBtn pull-right" type="button">Keyingisi <i class="fa fa-long-arrow-right"></i></button>
+                                                    {% if work.status_geodezis_komeral == 2 %}
+                                                         <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+                                                     {% endif %}
 
+                                                    <button class="btn btn-primary nextBtn pull-right" type="button">Keyingisi <i class="fa fa-long-arrow-right"></i></button>
                                                 </div>
                                             </div>
                                         </div>
@@ -584,6 +599,10 @@
                                             <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Saqlash</button>
                                         {% endif %}
 
+                                         {% if work.status_geodezis_komeral == 2 %}
+                                             <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+                                         {% endif %}
+
                                         <button class="btn btn-primary nextBtn pull-right" type="button">Keyingisi <i class="fa fa-long-arrow-right"></i></button>
                                     </div>
 
@@ -667,6 +686,10 @@
                                               {% if work.status == 0 %}
                                                 <button class="btn btn-primary nextBtn pull-right store" type="button">Yakunlash</button>
                                                   {% endif %}
+                                             {% if work.status_geodezis_komeral == 2 %}
+                                                         <button class="btn btn-primary nextBtn pull-right store" type="button">Yakunlash</button>
+                                                     {% endif %}
+
                                             <input type="text" value="{{ work.id }}" id="work_id" style="display:none;">
                                             <input type="text" value="{{ user.profile.full_name }}" id="worker" style="display:none;">
                                         </div>
@@ -916,7 +939,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                     {% if work.status == 0 or work.status == 2 %}
+                                                     {% if work.status == 0 or work.status == 2  or work.status_geodezis_komeral == 2 %}
                                                             <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> Saqlash</button>
                                                      {% endif %}
                                                     <button class="btn btn-primary nextBtn pull-right" type="button">Keyingisi <i class="fa fa-long-arrow-right"></i></button>
@@ -1172,7 +1195,7 @@
                                             </div>
                                         </div>
 
-                                        {% if work.status == 0 or work.status == 2 %}
+                                        {% if work.status == 0 or work.status == 2 or work.status_geodezis_komeral == 2 %}
                                              <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> Saqlash</button>
                                          {% endif %}
                                         <button class="btn btn-primary nextBtn pull-right" type="button">Keyingisi <i class="fa fa-long-arrow-right"></i></button>
@@ -1255,7 +1278,7 @@
                                                     <input class="form-control" name="d_13" id="d_13" type="text" value="{{ form.d_13 }}" placeholder="должность, Ф.И.О. проверяющего, дата проведения контроля и приемки, оценка работ">
                                                 </div>
                                             </div>
-                                             {% if work.status == 0 or work.status == 2 %}
+                                             {% if work.status == 0 or work.status == 2 or work.status_geodezis_komeral == 2 %}
                                                 <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" type="button">Yakunlash</button>
                                              {% endif %}
 
