--- a/topografiya/templates/worker/polevoy_work_doing.html
+++ b/topografiya/templates/worker/polevoy_work_doing.html
@@ -863,9 +863,22 @@
                     <div class="col-md-6 card p-2 shadow-lg">
                         <button type="button" class="btn btn-warning btn-lg" id="save_files" worker="{{ user.profile.full_name }}" work-id="{{ work.id }}" style="width: 100%"> <i class="fa fa-check"></i> Сақлаш</button>
                     </div>
-                    <div class="col-md-6 card p-2 shadow-lg">
-                         <button type="button" worker="{{ user.profile.full_name }}" work-id="{{ work.id }}"  id="send_to_check_polevoy" class="btn btn-primary btn-lg" style="width: 100%"> <i class="fa fa-send"></i> Текширувга юбориш</button>
-                    </div>
+                     {% if programwork %}
+                         {% if programwork.status == 4 %}
+                             <div class="col-md-6 card p-2 shadow-lg">
+                                 <button class="btn btn-primary btn-lg"  type="button" worker="{{ user.profile.full_name }}" work-id="{{ work.id }}"  id="save_akt"  style="width: 100%"> <i class="fa fa-check"></i> Текширувга юбориш</button>
+                             </div>
+                         {% else %}
+                             <div class="col-md-6 card p-2 shadow-lg">
+                                 <h4 class="btn btn-warning btn-lg"  type="button"> <i class="fa fa-warning"></i> Бу обектда топографик геодезик иш мавжуд! Тасдиқланишни кутинг илтимос!   </h4>
+                             </div>
+                         {% endif %}
+                     {% else %}
+
+                        <div class="col-md-6 card p-2 shadow-lg">
+                             <button type="button" worker="{{ user.profile.full_name }}" work-id="{{ work.id }}"  id="send_to_check_polevoy" class="btn btn-primary btn-lg" style="width: 100%"> <i class="fa fa-send"></i> Текширувга юбориш</button>
+                        </div>
+                     {% endif %}
                 </div>
                 {% endif %}
             </div>
