--- a/topografiya/templates/leader/komeral/komeral_works.html
+++ b/topografiya/templates/leader/komeral/komeral_works.html
@@ -181,13 +181,13 @@
                                                         </div>
                                                         <hr>
                                                         <div class="detail-footer">
-                                                            <a href="{% url 'show_komeral_work' id=object.object.id %}">
+                                                            <a href="{% url 'checking_komeral_works' id=object.object.id %}">
                                                                 <button class="btn btn-square btn-outline-primary-2x float-end">
                                                                     Батафсил маълумот
                                                                 </button>
                                                             </a>
                                                         </div>
-                                                        <img class="bg-img" src="{% static 'assets/images/dashboard/folder.png' %}" alt="">
+                                                        <img class="bg-img" src="{% static 'assets/images/dashboard/product-1.png' %}" alt="">
                                                     </div>
                                                 </div>
                                             </div>
