--- a/topografiya/templates/master.html
+++ b/topografiya/templates/master.html
@@ -242,7 +242,7 @@
                                     <li>
                                         <a href="{% url 'program_works_geodezis' %}">Топографик-геодезик дастури
                                     {% if count.new_works_geodezis != 0 %}
-                                                <span style="float: right" class="badge rounded-pill badge-danger">
+                                                <span style="margin-left: 15px" class="badge rounded-pill badge-danger">
                                                      {{ count.new_works_geodezis }}
                                                 </span>
                                               {% endif %}
@@ -250,7 +250,17 @@
                                     </li>
 
                                     <li>
-                                        <a href="{% url 'geodesiz_komeral_works' %}">Бош геодезист назорати
+                                        <a href="{% url 'geodesiz_komeral_works' %}">Комерал назорат
+                                            {% if count.geodezis_komeral_works_to_check != 0 %}
+                                                <span style="float: right" class="badge rounded-pill badge-danger">
+                                                    {{ count.geodezis_komeral_works_to_check }}
+                                                </span>
+                                            {% endif %}
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="">Ҳисобот
                                             {% if count.geodezis_komeral_works_to_check != 0 %}
                                                 <span style="float: right" class="badge rounded-pill badge-danger">
                                                     {{ count.geodezis_komeral_works_to_check }}
@@ -261,8 +271,70 @@
 
                                 </ul>
                             </li>
+                                 <br>
                             {% endif %}
 {#                            bu geodezis profili#}
+{#                                                bu oogd printer#}
+                        {% if user.profile.status == '3' %}
+                            <li class="dropdown"><a class="nav-link menu-title active" href="javascript:void(0)"><i data-feather="briefcase"></i><span>Ишлар</span></a>
+                                <ul class="nav-submenu menu-content">
+                                    <li><a href="{% url 'allworks' %}">Барча ишлар</a></li>
+                                    <li>
+                                        <a href="{% url 'program_works_geodezis' %}">Топографик-геодезик дастури
+                                    {% if count.new_works_geodezis != 0 %}
+                                                <span style="margin-left: 15px" class="badge rounded-pill badge-danger">
+                                                     {{ count.new_works_geodezis }}
+                                                </span>
+                                              {% endif %}
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="{% url 'geodesiz_komeral_works' %}">Комерал назорат
+                                            {% if count.geodezis_komeral_works_to_check != 0 %}
+                                                <span style="float: right" class="badge rounded-pill badge-danger">
+                                                    {{ count.geodezis_komeral_works_to_check }}
+                                                </span>
+                                            {% endif %}
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="">Ҳисобот
+                                            {% if count.geodezis_komeral_works_to_check != 0 %}
+                                                <span style="float: right" class="badge rounded-pill badge-danger">
+                                                    {{ count.geodezis_komeral_works_to_check }}
+                                                </span>
+                                            {% endif %}
+                                        </a>
+                                    </li>
+
+                                </ul>
+                            </li>
+                                 <br>
+                            {% endif %}
+                        {#                        bu oogd printer#}
+{#                        bu oogd hisobot yozadigan#}
+                        {% if user.profile.status == '4' %}
+                            <li class="dropdown"><a class="nav-link menu-title active" href="javascript:void(0)"><i data-feather="briefcase"></i><span>Ишлар</span></a>
+                                <ul class="nav-submenu menu-content">
+
+
+                                    <li>
+                                        <a href="{% url 'oogd_reports' %}">Ҳисобот
+                                            {% if count.reports_oogd != 0 %}
+                                                <span style="float: right" class="badge rounded-pill badge-danger">
+                                                    {{ count.reports_oogd }}
+                                                </span>
+                                            {% endif %}
+                                        </a>
+                                    </li>
+
+                                </ul>
+                            </li>
+
+                            {% endif %}
+                        {#                        bu oogd hisobot yozadigan#}
 
                             <li class="dropdown"><a class="nav-link menu-title link-nav" href="#"><i data-feather="message-circle"></i><span>Хабарлар<span style="float: right" class="badge rounded-pill badge-danger">3</span></span></a></li>
                             <li class="dropdown"><a class="nav-link menu-title link-nav" href="#"><i data-feather="arrow-down-circle"></i><span>Aрхив</span></a></li>
